--- a/Portfolio/src/CSS/Carousel.css
+++ b/Portfolio/src/CSS/Carousel.css
@@ -97,7 +97,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.809);
   color: white;
   display: flex;
   flex-direction: column;
@@ -110,8 +110,35 @@
   transition: opacity 0.3s ease;
 }
 
+.overlay h2,
+.overlay p {
+  margin: 10px 0 10px 0;
+}
+
+.overlay .technologies {
+  margin: 15px 0 0 0;
+}
+
 .custom-slide:hover .overlay {
   opacity: 1;
+}
+
+.overlay a {
+  color: rgb(32, 32, 32);
+  text-decoration: none;
+  font-weight: bold;
+  background-color: rgb(227, 227, 227);
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.technologies span {
+  display: inline-block;
+  padding: 4px 8px;
+  margin: 4px;
+  border-radius: 5px;
+  background-color: #616161;
+  font-size: 14px;
 }
 
 @media (max-width: 768px) {
