--- a/Portfolio/src/CSS/Home.css
+++ b/Portfolio/src/CSS/Home.css
@@ -197,6 +197,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
 }
 
 .lien-icon-ensemble {
@@ -205,6 +206,7 @@
   align-items: center;
   border-right: 1px solid rgb(93, 93, 93);
   padding-right: 95px;
+  width: 50%;
 }
 
 .paragraphe-contact {
@@ -212,6 +214,37 @@
   font-family: montserrat;
   margin-bottom: 70px;
   max-width: 400px;
+}
+
+.contact-photo img {
+  width: 70%;
+  margin: 0px 35px 35px 0px;
+}
+
+.contact-photo {
+  display: flex;
+  justify-content: end;
+  width: 60%;
+}
+
+@media (max-width: 1024px) {
+  .flex-propos {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .text-apropos img {
+    width: 575px;
+    height: 425px;
+  }
+  .propos-de-moi {
+    order: 1;
+  }
+
+  .competences {
+    order: 2;
+    align-items: center;
+  }
 }
 
 @media (max-width: 768px) {
@@ -223,20 +256,6 @@
 
   .présentation {
     height: 130vh;
-  }
-
-  .flex-propos {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .propos-de-moi {
-    order: 1;
-  }
-
-  .competences {
-    order: 2;
-    align-items: center;
   }
 
   .propos-de-moi .title {
